--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>ExamThourayaS2</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,5 +46,12 @@
 			</plugin>
 		</plugins>
 	</build>
+   <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>admin</name>
+            <url>http://192.168.1.15:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
