--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,29 @@
-version: "3"
+version: "3.3"
 
 services:
   mysqldb:
-    container_name: mysqldb
+    container_name: mysql
     image: mysql:8
     restart: unless-stopped
-    ports:
-      - 3306:3306
     environment:
-      - MYSQL_DATABASE=tpachato
-      - MYSQL_ROOT_PASSWORD=admin
+      MYSQL_ROOT_PASSWORD: mysql
     volumes:
-      - /home/mysqll:/var/lib/mysql  
+      - /home/mysql/data:/var/lib/mysql
+
   spring_app:
-    image: achatt
-    container_name: confident_torvalds
+    build:
+      context: "./"
+      dockerfile: "Dockerfile"
     restart: on-failure
+    ports:
+      - 8089:8089
     environment:
-        - spring.datasource.url=jdbc:mysql://mysqldb/tpachato?createDatabaseIfNotExist=true    
-        - 9090:8089 
+      SPRING_APPLICATION_JSON: '{
+        "spring.datasource.url"  : "jdbc:mysql://mysql:3306/tp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "mysql",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
     depends_on:
-     - mysqldb
+      - mysqldb
