--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
+#Server configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.servlet.context-path=/SpringMVC
+server.port=8089
 ### DATABASE ###
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/examv2thouraya?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.1.20:3306/tp?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=asijee
+spring.datasource.password=root
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=8083
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#Server configuration
-server.servlet.context-path=/SpringMVC
+#logging configuration
+logging.level.com.zaxxer.hikari=INFO
+logging.level.org.springframework=INFO
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
