--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-	      <plugin>
-                          <groupId>org.apache.maven.plugins</groupId>
-                         <artifactId>maven-deploy-plugin</artifactId>
-                        <version>2.8.2</version>
-                   </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
+				
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.13</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>nexus</serverId>
+					<nexusUrl>http://192.168.1.20:8081/nexus/</nexusUrl>
+				</configuration>
+			</plugin>
 			
 			
 			
