--- a/pom.xml
+++ b/pom.xml
@@ -38,20 +38,38 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-   <distributionManagement>
+	   <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
             <name>admin</name>
             <url>http://192.168.1.20:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
+				
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.13</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>nexus</serverId>
+					<nexusUrl>http://192.168.1.20:8081/nexus/</nexusUrl>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
