--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.6.3</version>
+				        <configuration>
+                                <trimStackTrace>false</trimStackTrace>
+                                </configuration>
 			
 			</plugin>
 				
