--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
                                 </configuration>
 			
 			</plugin>
+			
+			
+			<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+     <version>2.8.2</version>
+</plugin>
 				
 
 		</plugins>
