--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+
 				
 				        <configuration>
                                 <trimStackTrace>false</trimStackTrace>
